added login page and updated style

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,14 +10,14 @@
 
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">        
 
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/style.css" rel="stylesheet">
 
         <title>Stock Trader: {% block title %}{% endblock %}</title>
     </head>
     <body>
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="red">Stock</span><span class="yellow">Trader</a>
+                <a class="navbar-brand" href="/"><span class="blue">Stock</span><span class="yellow">Trader</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
