completed login functionality and redirect to homepage upon success

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,5 @@
 {% block main %}
     <h1>I need to figure out what to do with this page!</h1>
     <h3>Probably will do portfolio like in finance and add performance graph?</h3>
-    <a href="https://pixabay.com/photos/money-finance-mortgage-loan-2696229/"></a>
+    <img src="https://media.istockphoto.com/id/157308559/photo/money-pile-100-dollar-bills.jpg?s=1024x1024&w=is&k=20&c=IJjHV-iEIwB70mHWbfSxhXNeywhlL4S5pAYNHiDKSZg=">
 {% endblock %}
