--- a/templates/buy.html
+++ b/templates/buy.html
@@ -7,12 +7,12 @@
 {% block main %}
     <form action="/buy" method="post">
         <div class="mb-3">
-            <label for="symbol">Stock Symbol:</label><br>
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text"><br>
+            <label for="symbol">Stock Symbol:</label><br><br>
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="text"><br>
         </div>
         <div class="mb-3">
-            <label for="shares">Shares:</label><br>
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number"><br>
+            <label for="shares">Shares:</label><br><br>
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="Shares" type="number"><br>
         </div>
         <button class="btn btn-primary" type="submit">Place Order</button>
     </form>
