adding portfolio to homepage and cash deposit functions

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,51 @@
 {% endblock %}
 
 {% block main %}
-    <h1>I need to figure out what to do with this page!</h1>
-    <h3>Probably will do portfolio like in finance and add performance graph?</h3>
+    <h1>Welcome to your portfolio!</h1>
     <img src="https://media.istockphoto.com/id/157308559/photo/money-pile-100-dollar-bills.jpg?s=1024x1024&w=is&k=20&c=IJjHV-iEIwB70mHWbfSxhXNeywhlL4S5pAYNHiDKSZg=">
+    
+    <div class="mb-3">
+        <table class="table">
+            <thead>
+                <tr>
+                <th scope="col">Symbol</th>
+                <th scope="col">Name</th>
+                <th scope="col">Shares</th>
+                <th scope="col">Price</th>
+                <th scope="col">TOTAL</th>
+                </tr>
+            </thead>
+            <tbody>
+              {% for row in portfolio %}
+                <tr>
+                    <td>{{ row[2] }}</td>
+                    <td>{{ row[3] }}</td>
+                    <td>{{ row[4] }}</td>
+                    <td>{{ row[5] | usd }}</td>
+                    <td>{{ row[6] | usd }}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+            <tfoot>
+                <tr>
+                  <td>Cash Balance: </td>
+                  <td>{{ cash | usd }}</td>
+                </tr>
+                <tr>
+                    <td>Total Holdings: </td>
+                    <td>{{ final | usd }}</td>
+                  </tr>
+              </tfoot>
+            </table>
+    </div>
+    <br>
+    <div class="mb-3">
+      <form action="/" method="post">
+        <div class="mb-3">
+            <label for="cash">Would you like to make a deposit?</label><br><br>
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="cash" name="cash" placeholder="Cash" type="number"><br>
+        </div>
+        <button class="btn btn-primary" type="submit">Add Cash</button>
+      </form>
+    </div>
 {% endblock %}
