--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Homepage???
+    Portfolio
 {% endblock %}
 
 {% block main %}
@@ -22,11 +22,11 @@
             <tbody>
               {% for row in portfolio %}
                 <tr>
-                    <td>{{ row[2] }}</td>
                     <td>{{ row[3] }}</td>
                     <td>{{ row[4] }}</td>
-                    <td>{{ row[5] | usd }}</td>
+                    <td>{{ row[5] }}</td>
                     <td>{{ row[6] | usd }}</td>
+                    <td>{{ row[7] | usd }}</td>
                 </tr>
               {% endfor %}
             </tbody>
