--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 <th scope="col">Symbol</th>
                 <th scope="col">Name</th>
                 <th scope="col">Shares</th>
-                <th scope="col">Price</th>
+                <th scope="col">Current Price</th>
                 <th scope="col">TOTAL</th>
                 </tr>
             </thead>
