--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 /* Size for brand */
 nav .navbar-brand
 {
@@ -20,4 +24,32 @@ nav .navbar-brand .yellow
 nav .navbar-brand .green
 {
     color: #2e944b;
+}
+
+.h3 {
+    color: #537fbe;
+}
+
+/* article grid */
+.custom-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 25px;
+    margin: 0 ;
+    padding: 0;
+    border: 0;
+    text-align: left;
+    font-size: 1.5rem;
+}
+
+.article-image {    
+    grid-row: span 4;
+}
+
+.table {
+    font-size: x-large;    
+}
+
+.header-color {
+    color: #537fbe;
 }
