--- a/templates/sell.html
+++ b/templates/sell.html
@@ -17,7 +17,7 @@
         </div>
         <div class="mb-3">
             <label for="shares">Indicate how many shares to sell:</label><br><br>
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number"><br>
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="Shares" type="number"><br>
         </div>
         <button class="btn btn-primary" type="submit">Place Order</button>
     </form>
