updating styles and adding buy suggestions table

--- a/templates/buy.html
+++ b/templates/buy.html
@@ -22,4 +22,39 @@
         <br>
         <button class="btn btn-primary" type="submit">Place Order</button>        
     </form>
+    <br><hr><br>
+    <h3>Not sure what to buy? Here are a few to consider...</h3>
+    <br><br>
+    <div class="mb-3">
+        <table class="table table-borderless chart">
+            <thead>
+                <tr class="header-color">
+                  <th scope="col">Company</th>
+                  <th scope="col">Symbol</th>
+                </tr>
+            </thead>
+            <tbody>              
+                <tr>
+                    <td>Microsoft</td>
+                    <td>MSFT</td>                    
+                </tr>
+                <tr>
+                    <td>Apple</td>
+                    <td>AAPL</td>
+                </tr>  
+                <tr>
+                    <td>Netflix</td>
+                    <td>NFLX</td>
+                </tr>  
+                <tr>
+                    <td>Amazon</td>
+                    <td>AMZN</td>
+                </tr>  
+                <tr>
+                    <td>Cigna</td>
+                    <td>CI</td>
+                </tr>            
+            </tbody>
+          </table>
+    </div>
 {% endblock %}
