--- a/templates/register.html
+++ b/templates/register.html
@@ -12,11 +12,11 @@
         </div>
         <div class="mb-3">
             <label for="password">Password:</label><br>
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="text">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
             <label for="confirmation">Confirm Password:</label><br>
-            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirmation" type="text">
+            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirmation" type="password">
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
