--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,7 +51,7 @@
             </header>
         {% endif %}
 
-        <main class="container-fluid py-5 text-center">
+        <main class="container-fluid py-5 text-center main">
             {% block main %}{% endblock %}
         </main>
 
