--- a/static/style.css
+++ b/static/style.css
@@ -44,16 +44,18 @@ nav .navbar-brand .green
 .custom-container {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    gap: 25px;
+    gap: 5px;
     margin: 0 ;
     padding: 0;
     border: 0;
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 
 .article-image {    
-    grid-row: span 4;
+    grid-row: span 3;
+    width: 100%;
+    height: 100%;
 }
 
 .table {
