--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
         <title>Stock Trader: {% block title %}{% endblock %}</title>
     </head>
     <body>
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
+        <nav class="bg-light border navbar navbar-expand-md navbar-light sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/"><span class="blue">Stock</span><span class="yellow">Trader</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
