--- a/templates/index.html
+++ b/templates/index.html
@@ -65,10 +65,10 @@
               </tfoot>
             </table>
     </div>
-    <br>
+    <br><hr><br>
     <div class="mb-3">
       <form action="/" method="post">
-        <div class="mb-3">
+        <div class="mb-3 h3">
             <label for="cash">Would you like to make a deposit?</label><br><br>
             <input autocomplete="off" class="form-control mx-auto w-auto" id="cash" name="cash" placeholder="Cash" type="number"><br>
         </div>
