--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+    <p class="messages">If this is your first time using StockTrader, please click on the Register link and begin by creating an account.</p><br>
     <form action="/login" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
